@@ -132,7 +132,7 @@ src_install () {
 	emake install DESTDIR="${D}" || die "make install failed"
 
 	rm "${D}"/usr/bin/emacs-${SLOT}-emacs-${SLOT} || die "removing duplicate emacs executable failed"
-	dohard /usr/bin/emacs{-emacs,}-${SLOT} || die
+	mv "${D}"/usr/bin/emacs{-emacs,}-${SLOT} || die
 
 	if use aqua ; then
 		einfo "Installing Carbon Emacs..."
