@@ -2,7 +2,8 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-  19 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de> emacs-18.59-r3.ebuild:
+  19 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de> emacs-18.59-r3.ebuild,
+  emacs-21.4-r10.ebuild:
   Don't install emacs executable twice.
 
   19 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de> emacs-21.4-r10.ebuild,
