@@ -2,6 +2,11 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
+  emacs-cvs-22.0.95-r3.ebuild, emacs-cvs-22.0.9999-r7.ebuild,
+  emacs-cvs-23.0.0-r3.ebuild:
+  Don't install emacs executable twice.
+
   18 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
   emacs-cvs-22.0.95-r3.ebuild, emacs-cvs-22.0.9999-r7.ebuild,
   emacs-cvs-23.0.0-r3.ebuild:
